# yageweek

./: .gitignore  Python-env.md  Readme.md  Windows-notes.md  lib-map.py  pyproject.toml  python-env.md
day1/: Intro1.ipynb
day4/: Evals.ipynb
day5/: Readme.md
entry/: Readme.md  clean.sh
entry/java/: ArrSort.java  Sol1.java
entry/taskA/: Readme.md  task1comment.md
entry/taskB-runes/: .gitignore  CatBoost-Readme.md  Readme.md  answers.csv  catboost-requirements.txt  runes-SVM.ipynb  runes-SVM.py  runes-arch-sweep.py  runes-catboost.py  runes-kit-36-5-1.py  runes-kit-36.py  runes-kit-51.py
entry/taskB-runes/example/: common.py
entry/taskD/: Readme.md  Solution.java
final/: Q1-25.md  Readme.md  submission.ipynb
java/: Robot.java  Select.java
taskA/: Solution.java
taskB-runes/: Readme.md  answers.csv  find-rule.py  rule-extraction-Readme.md  runes-SVM.py  runes-catboost.py  runes-kit.py  runes.py
taskB-runes/example/: deep.py  dnn_app_utils_v3.py
taskC-robot/: Readme.md  Solution.java
taskD/: Readme.md  Solution.java
v/: Q1-24.md  Readme.md  submission.ipynb
